[project]
name = "comfyui-ricklove"
description = "Nodes: Image Crop and Resize by Mask, Image Uncrop, Image Shadow, Optical Flow (Dip), Warp Image with Flow, Image Threshold (Channels), Finetune Variable, Finetune Analyze, Finetune Analyze Batch, ... Misc ComfyUI nodes by Rick Love"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ricklove/comfyui-ricklove"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-ricklove"
Icon = ""
